rust/src/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::std::os::raw::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of max_align_t"][::std::mem::size_of::<max_align_t>() - 32usize];
    ["Alignment of max_align_t"][::std::mem::align_of::<max_align_t>() - 16usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce1"]
        [::std::mem::offset_of!(max_align_t, __clang_max_align_nonce1) - 0usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce2"]
        [::std::mem::offset_of!(max_align_t, __clang_max_align_nonce2) - 16usize];
};
unsafe extern "C" {
    pub fn get_rax() -> usize;
}
unsafe extern "C" {
    pub fn get_rcx() -> usize;
}
unsafe extern "C" {
    pub fn get_rdx() -> usize;
}
unsafe extern "C" {
    pub fn get_rsp() -> usize;
}
unsafe extern "C" {
    pub fn get_rbp() -> usize;
}
unsafe extern "C" {
    pub fn get_rsi() -> usize;
}
unsafe extern "C" {
    pub fn get_rdi() -> usize;
}
unsafe extern "C" {
    pub fn get_r8() -> usize;
}
unsafe extern "C" {
    pub fn get_r9() -> usize;
}
unsafe extern "C" {
    pub fn get_r10() -> usize;
}
unsafe extern "C" {
    pub fn get_r11() -> usize;
}
unsafe extern "C" {
    pub fn get_r12() -> usize;
}
unsafe extern "C" {
    pub fn get_r13() -> usize;
}
unsafe extern "C" {
    pub fn get_r14() -> usize;
}
unsafe extern "C" {
    pub fn get_r15() -> usize;
}
